--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!doctype html>
 <html lang="en">
   <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+    <meta charset="UTF-8" /><!-- src/index.html -->
+    <link href="https://fonts.googleapis.com/css2?family=42dot+Sans:wght@300;400;500;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:wght,FILL,GRAD@300,0,0&display=swap" rel="stylesheet">
+  
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>B-log by BMC</title>
   </head>
